connect slick.js files and change difference of files

--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,3 +1,5 @@
+@use "../../slick-1.8.1/slick/slick.scss";
+@use "../../slick-1.8.1/slick/slick-theme.scss";
 @use "visually-hidden";
 @use "container";
 @use "header";
