--- a/scss/blocks/_suggestion.scss
+++ b/scss/blocks/_suggestion.scss
@@ -105,7 +105,7 @@
     background-image: url("../../images/next.svg");
   }
   &:focus {
-    background-image: url("../../images/next.svg")!important;
+    background-image: url("../../images/next.svg");
   }
   &::before {
     display: block;
