complate all divisions

--- a/scss/blocks/_suggestion.scss
+++ b/scss/blocks/_suggestion.scss
@@ -112,3 +112,29 @@
     content: "";
   }
 }
+
+
+/* Retina background images */
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+
+  /* Retina-specific stuff here */
+
+  .suggestion__user::before {
+      background-image:  url("../../images/vijay@2x.png");
+  }
+
+  .suggestion__user-jenny::before {
+    background-image: url("../../images/jenny@2x.png");
+  }
+   
+  .suggestion__user-kristin::before {
+    background-image: url("../../images/kristin@2x.png");
+  }
+}
