--- a/css/main.css
+++ b/css/main.css
@@ -895,4 +895,120 @@ img {
 .slick-next::before {
   display: block;
   content: "";
+}
+
+/* Retina background images */
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  /* Retina-specific stuff here */
+  .suggestion__user::before {
+    background-image: url("../../images/vijay@2x.png");
+  }
+  .suggestion__user-jenny::before {
+    background-image: url("../../images/jenny@2x.png");
+  }
+  .suggestion__user-kristin::before {
+    background-image: url("../../images/kristin@2x.png");
+  }
+}
+.site-footer {
+  padding-top: 75px;
+  padding-bottom: 28px;
+  background-color: #314051;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.site-footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 160px;
+}
+
+.site-footer__logo-wrapper {
+  max-width: 142px;
+}
+
+.site-footer__desc {
+  font-size: 14px;
+  line-height: 150.6%;
+}
+
+.site-footer__list {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+.site-footer__significant {
+  display: inline-block;
+  margin-bottom: 21px;
+  font-weight: 500;
+  line-height: 22px;
+  color: #fff;
+}
+
+.site-footer__link {
+  font-size: 13px;
+  line-height: 20px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.site-footer__contact {
+  font-style: normal;
+}
+
+.site-footer__form {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.site-footer__input {
+  max-width: 223px;
+  padding: 12px 48px 11px 16px;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1019607843);
+  border: none;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  outline: none;
+}
+
+.site-footer__btn {
+  padding-top: 6px;
+  padding-right: 8px;
+  background-color: rgba(255, 255, 255, 0.1019607843);
+  border: none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.site-footer__date {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.site-footer__extra {
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.site-footer__copyright {
+  font-family: "Mulish", "Arial", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 21px;
 }/*# sourceMappingURL=main.css.map */
